install/mini-loop/util/debug-utils/apache-test/apache-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apacheingress
  annotations:
    #kubernetes.io/ingress.class: public
    #kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apachehost.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /fred
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port: 
              number: 8282
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port: 
              number: 8282
